--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 On the field, Ronaldo and Messi spearhead the long-standing El-Clasico rivalry for Real Madrid and Barcelona, respectively. And individual football records continually get broken by both. In many ways, this rivalry is a parallel of the Federer – Nadal rivalry in tennis. Sheer talent vs determination and grit.
 
 Well, we’ve finally found five reasons why Ronaldo can be considered better than Messi…</p>
-<image class="ronaldo" src="real-gotov-predlozhit-ronaldu-novyj-kontrakt-s-zarplatoj-30-mln-do-chm-2018_1524300299780270.jpg" width="1200px">
+<image class="ronaldo" src="real.jpg" width="1200px">
 	<h1>1)Ronaldo is better athlete</h1>
 <p>Outside of the perfectly balanced Barcelona strategy, Messi’s defects could, potentially, be exposed. Conversely, Ronaldo is arguably more rounded than any other player in world football. With greater speed than Messi (33.6 kph compared to 32.5kph), greater strength, greater use of his weak foot, and an outstanding heading ability (Ronaldo has scored from 8.5 feet in the air), his characteristics have been carved with greater attention to detail.</p>
 <img src="Ronaldo-v-Messi-1024x577.jpg" width="950px">
